@@ -169,6 +169,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - PIC16xxx assembler     Phil Mattison
 - Pike                   Rick E.
 - Pixel Bender           Richard Olsson
+- PL/I                   Robert Prins
 - PL/SQL                 Victor Engmark
 - PostgreSQL             Christophe Chauvet
 - POV-Ray                Carl Fürstenberg
